--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "body-parser": "^1.18.0",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "^4.15.4",
+    "express-jwt": "^5.3.0",
+    "jwks-rsa": "^1.2.0",
+    "method-override": "^2.3.9",
+    "mongoose": "^4.11.11",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
